# hf-s3c-cli

./: NOTICE  pyproject.toml  readme.md
src/hf_s3c/: download.py  main.py  upload.py
