[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-s3c-cli"
version = "0.0.1"
description = "an uploader/downloader similar to huggingface_cli with S3impleClient acceleration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }

dependencies = [
    "huggingface_hub>=1.0",
    "s3impleclient",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
hf-s3c = "hf_s3c.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
